# configer

./: .pre-commit-config.yaml  README.md  config.json  config.yaml  pyproject.toml
.copier/: .copier-answers.yaml
configer/: __init__.py  configer.py  core.py  example.py
tests/: test_core.py
